<resources>
    <string name="app_name">Facebook Clone</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Phone number or Email address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Log In</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_up">Create New Facebook Account</string>
    <string name="action_sign_up_short">Register</string>
</resources>
